Added Meta Tags to Projects

--- a/src/little-lemon-capstone/public/index.html
+++ b/src/little-lemon-capstone/public/index.html
@@ -25,6 +25,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
+    <meta name="description" content="Feeling hungry? Order some of the best breakfast foods from the Little Lemon Restaurant!"/>
+    <meta name="og:title" content="Little Lemon Restaurant"/>
+    <meta name="og:description" content="Feeling hungry? Order some of the best breakfast foods from the Little Lemon Restaurant!"/>
+    <meta name="og:image" content="https://example.com/one-place-fishing-store.jpg"/>
+    <meta name="og:image:alt" content="Logo of the Little Lemon Restaurant."/>
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
