--- a/src/little-lemon-capstone/public/index.html
+++ b/src/little-lemon-capstone/public/index.html
@@ -32,6 +32,8 @@
     <meta name="og:image" content="https://example.com/one-place-fishing-store.jpg"/>
     <meta name="og:image:alt" content="Logo of the Little Lemon Restaurant."/>
     <meta property="og:type" content="website" />
+
+    <link href='https://fonts.googleapis.com/css?family=Markazi Text' rel='stylesheet'>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
