--- a/src/little-lemon-capstone/public/index.html
+++ b/src/little-lemon-capstone/public/index.html
@@ -34,6 +34,7 @@
     <meta property="og:type" content="website" />
 
     <link href='https://fonts.googleapis.com/css?family=Markazi Text' rel='stylesheet'>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=room_service" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
