--- a/src/little-lemon-capstone/public/index.html
+++ b/src/little-lemon-capstone/public/index.html
@@ -34,6 +34,9 @@
     <meta property="og:type" content="website" />
 
     <link href='https://fonts.googleapis.com/css?family=Markazi Text' rel='stylesheet'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
 
