--- a/src/little-lemon-capstone/public/index.html
+++ b/src/little-lemon-capstone/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Little Lemon</title>
 
     <meta name="description" content="Feeling hungry? Order some of the best breakfast foods from the Little Lemon Restaurant!"/>
     <meta name="og:title" content="Little Lemon Restaurant"/>
